kubernetes/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: minecraft
  name: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: minecraft
        image: jsoyer/obsidian-reforged:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - name: minecraft-data
          mountPath: /minecraft
        resources:
          limits:
            cpu: 1500m
            memory: 2048M
            ephemeral-storage: 512Mi
          requests:
            cpu: 750m
            memory: 750M
            ephemeral-storage: 2Mi
        ports:
        - containerPort: 25565
          name: java
        - containerPort: 19132
          name: bedrock-v4
        - containerPort: 19133
          name: bedrock-v6
      volumes:
      - name: minecraft-data
        persistentVolumeClaim:
          claimName: minecraft-pvc
